After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751386 - aacparse: cannot set LOAS src caps
aacparse: cannot set LOAS src caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.5.1
Other Linux
: Normal normal
: 1.5.91
Assigned To: Jan Schmidt
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-23 15:21 UTC by Guillaume Marquebielle
Modified: 2015-09-16 15:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch fixing the issue (3.00 KB, patch)
2015-06-23 15:21 UTC, Guillaume Marquebielle
none Details | Review
Sample AAC file gdppayed (492.27 KB, application/octet-stream)
2015-06-23 15:22 UTC, Guillaume Marquebielle
  Details
aacparse: Skip LOAS AAC until a valid config is seen. (1.51 KB, patch)
2015-09-15 21:07 UTC, Jan Schmidt
none Details | Review
aacparse: Skip LOAS AAC until a valid config is seen. (3.25 KB, patch)
2015-09-16 12:25 UTC, Jan Schmidt
none Details | Review

Description Guillaume Marquebielle 2015-06-23 15:21:38 UTC
Created attachment 305922 [details] [review]
Patch fixing the issue

I'm testing with some AAC file extracted from live TV stream.
The file starts with LOAS frames with no configuration ("use previous config" bit set).
On first LOAS frame, this leads to have aacparse->sample_rate at 0 and aacparse->channels at 0 too.

As the element don't have any src caps set, we try to set src caps with these sample rate and channels leading to pipeline error.

The fix proposes to avoid setting src caps till we get a valid configuration from next LOAS frames.

This works correctly with the sample attached (AAC file gdppayed)

Thx
Comment 1 Guillaume Marquebielle 2015-06-23 15:22:21 UTC
Created attachment 305923 [details]
Sample AAC file gdppayed
Comment 2 Jan Schmidt 2015-09-15 21:07:00 UTC
Created attachment 311415 [details] [review]
aacparse: Skip LOAS AAC until a valid config is seen.

It's normal when dropping into the middle of a stream to
not always have the config available immediately, so skip LOAS
until a valid config is seen without either setting invalid
caps or erroring out.
Comment 3 Jan Schmidt 2015-09-15 21:07:41 UTC
This patch achieves the same effect for me, but is a bit simpler.
Comment 4 Jan Schmidt 2015-09-16 12:25:02 UTC
Created attachment 311453 [details] [review]
aacparse: Skip LOAS AAC until a valid config is seen.

It's normal when dropping into the middle of a stream to
not always have the config available immediately, so skip LOAS
until a valid config is seen without either setting invalid
caps or erroring out.
Comment 5 Jan Schmidt 2015-09-16 12:31:31 UTC
This patch ends up doing all the things the original one did, plus modifying some of the debug output to be more sensible.